[package]
name = "x402-Gateway-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros" ]}
tokio = { version = "1.49.0", features = ["full"] }
uuid = {version = "1.0", features = ["serde", "v4"] }
chrono = {version = "0.4", features =["serde"] }
